--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
 
 
-    <script src="./js/main.js" async defer></script>
+    <script src="./js/main.js"></script>
 
     <!-- Flatpickr JS -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
