--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="absolute inset-0 bg-black opacity-50"></div>
-        <div class="relative z-10 flex flex-col justify-center items-center h-full text-white float-in">
+        <div class="relative z-10 flex flex-col justify-center items-center h-full text-white float-in p-6 ">
             <h1 class="text-4xl md:text-6xl font-bold subtle-text-font">
                 Welcome to <span class="logo-text text-yellow-600">Henry Classic Wear</span>
             </h1>
